--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: newapi-model-check
-    restart: unless-stopped
+    restart: always
     ports:
       - "${APP_PORT:-3000}:3000"
     environment:
@@ -56,7 +56,7 @@ services:
   postgres:
     image: docker.m.daocloud.io/library/postgres:16-alpine
     container_name: newapi-postgres
-    restart: unless-stopped
+    restart: always
     profiles: ["local", "db"]
     environment:
       POSTGRES_DB: newapi_monitor
@@ -81,7 +81,7 @@ services:
   redis:
     image: docker.m.daocloud.io/library/redis:7-alpine
     container_name: newapi-redis
-    restart: unless-stopped
+    restart: always
     profiles: ["local", "redis"]
     ports:
       - "${REDIS_PORT:-6379}:6379"
