Add PostgreSQL enum types and update table constraints

--- a/.env.example
+++ b/.env.example
@@ -59,8 +59,8 @@ JWT_SECRET="change-this-secret-key"
 # 全局代理（可选）
 # GLOBAL_PROXY="http://127.0.0.1:7890"
 
-# 检测周期（cron 格式，默认每 6 小时）
-# CRON_SCHEDULE="0 */6 * * *"
+# 检测周期（cron 格式，默认每天 0/8/12/16/20 点）
+# CRON_SCHEDULE="0 0,8,12,16,20 * * *"
 
 # 并发控制
 # CHANNEL_CONCURRENCY="5"       # 单渠道最大并发数
@@ -86,3 +86,27 @@ JWT_SECRET="change-this-secret-key"
 
 # Redis 端口
 # REDIS_PORT="6379"
+
+# ==========================================
+# WebDAV 同步配置（可选）
+# ==========================================
+
+# WebDAV 服务器地址
+# WEBDAV_URL="https://dav.jianguoyun.com/dav/newapi"
+
+# WebDAV 用户名
+# WEBDAV_USERNAME="your-email@example.com"
+
+# WebDAV 密码/应用密码
+# WEBDAV_PASSWORD="your-app-password"
+
+# 同步文件名（默认 newapi-channels.json）
+# WEBDAV_FILENAME="newapi-channels.json"
+
+# ==========================================
+# 代理接口配置（可选）
+# ==========================================
+
+# 代理接口密钥（不设置则自动生成，重启后会变化）
+# 建议设置固定值以保持密钥稳定
+# PROXY_API_KEY="sk-your-proxy-api-key"
