--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "prisma": "^6.19.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "undici": "^7.20.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
