--- a/.env.example
+++ b/.env.example
@@ -56,8 +56,9 @@ JWT_SECRET="change-this-secret-key"
 # 检测提示词
 # DETECT_PROMPT="1+1=2? yes or no"
 
-# 全局代理（可选）
+# 全局代理（支持 HTTP/HTTPS/SOCKS5）
 # GLOBAL_PROXY="http://127.0.0.1:7890"
+# GLOBAL_PROXY="socks5://127.0.0.1:1080"
 
 # 检测周期（cron 格式，默认每天 0/8/12/16/20 点）
 # CRON_SCHEDULE="0 0,8,12,16,20 * * *"
@@ -93,17 +94,20 @@ JWT_SECRET="change-this-secret-key"
 # ==========================================
 # WebDAV 同步配置（可选）
 # ==========================================
+# 注意：坚果云用户需要先在网页端创建同步文件夹（如 newapi），
+# 然后 WEBDAV_URL 设置为该文件夹路径
 
-# WebDAV 服务器地址
+# WebDAV 服务器地址（必须包含已存在的同步文件夹）
 # WEBDAV_URL="https://dav.jianguoyun.com/dav/newapi"
 
 # WebDAV 用户名
 # WEBDAV_USERNAME="your-email@example.com"
 
-# WebDAV 密码/应用密码
+# WebDAV 密码/应用密码（坚果云需使用应用密码，非登录密码）
 # WEBDAV_PASSWORD="your-app-password"
 
-# 同步文件名（默认 newapi-channels.json）
+# 同步文件路径（可包含子目录，如 "backup/channels.json"）
+# 子目录会自动创建，但根目录（如 newapi）需要先在网页端创建
 # WEBDAV_FILENAME="newapi-channels.json"
 
 # ==========================================
