--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prisma": "^6.19.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "socks-proxy-agent": "^8.0.5",
     "tailwind-merge": "^3.4.0",
     "undici": "^7.20.0"
   },
