Update README with deploy script execution permission

--- a/.env.example
+++ b/.env.example
@@ -49,8 +49,8 @@ JWT_SECRET="change-this-secret-key"
 # 可选配置
 # ==========================================
 
-# 自动检测开关（true/false，默认 true）
-# AUTO_DETECT_ENABLED="true"
+# 自动检测开关（true/false，默认 false）
+# AUTO_DETECT_ENABLED="false"
 
 # 检测提示词
 # DETECT_PROMPT="1+1=2? yes or no"
