--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,6 +80,7 @@ services:
       - "${POSTGRES_PORT:-5432}:5432"
     volumes:
       - ./data/postgres:/var/lib/postgresql/data
+      - ./prisma/init.postgresql.sql:/docker-entrypoint-initdb.d/init.sql:ro
     networks:
       - model-check-network
     healthcheck:
