--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "db:seed": "tsx prisma/seed.ts",
     "db:studio": "prisma studio",
     "postinstall": "npm run db:generate",
-    "test:connections": "tsx scripts/test-connections.ts"
+    "test:connections": "tsx scripts/test-connections.ts",
+    "db:sync": "tsx scripts/db-sync.ts"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.0.0",
