--- a/.gitignore
+++ b/.gitignore
@@ -1,71 +1,51 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# IDE / Editor
+.claude
+.idea
+.vscode
+*.swp
+*.swo
+*~
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+# Git
+.git
 
-# testing
-/coverage
+# Dependencies
+node_modules
 
-# next.js
-/.next/
-/out/
+# Next.js
+.next
+out
 
-# production
-/build
+# Build
+dist
+build
+*.tsbuildinfo
 
-# misc
-.DS_Store
-*.pem
-Thumbs.db
-
-# debug
+# Data & Logs
+data
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
-!.env.example
+# Environment
+.env
+.env.local
+.env.*.local
 
-# vercel
-.vercel
+# OS files
+.DS_Store
+Thumbs.db
+Desktop.ini
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Test & Coverage
+coverage
+.nyc_output
 
-# prisma generated
-/src/generated/prisma
-
-# ace-tool index
-.ace-tool/
-
-# docker data persistence
-/data
-
-# IDE
-.idea/
-.vscode/
-*.swp
-*.swo
-
-# claude code
-.claude/
-
-# DevBooks
-.devbooks/
-/dev-playbooks/
-evidence/
-*.tmp
+# Misc
 *.bak
+*.tmp
+*.temp
 
-.npmignore
 nul
